Added view scripts

--- a/index2.html
+++ b/index2.html
@@ -228,6 +228,21 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
     <script type="text/javascript" src="js/controllers/internallocation.js"></script>
     <script type="text/javascript" src="js/controllers/category.js"></script>
     
+    <!-- views -->
+    <script type="text/javascript" src="js/views/core.js"></script>
+    <script type="text/javascript" src="js/views/events.js"></script>
+    <script type="text/javascript" src="js/views/island.js"></script>
+    <script type="text/javascript" src="js/views/location.js"></script>
+    <script type="text/javascript" src="js/views/inventory.js"></script>
+    <script type="text/javascript" src="js/views/joyride.js"></script>
+    <script type="text/javascript" src="js/views/progressbar.js"></script>
+    <script type="text/javascript" src="js/views/travel.js"></script>
+    <script type="text/javascript" src="js/views/forage.js"></script>
+    <script type="text/javascript" src="js/views/buildcraft.js"></script>
+    <script type="text/javascript" src="js/views/craft.js"></script>
+    <script type="text/javascript" src="js/views/build.js"></script>
+    <script type="text/javascript" src="js/views/internallocation.js"></script>
+    <script type="text/javascript" src="js/views/category.js"></script>
     
     <script src="js/scratch-bootstrap.js"></script> <!-- BE: NEEDS INTEGRATION INTO INCLUDED JS! -->
   </head>
