--- a/index2.html
+++ b/index2.html
@@ -244,6 +244,13 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
     <script type="text/javascript" src="js/views/internallocation.js"></script>
     <script type="text/javascript" src="js/views/category.js"></script>
     
+    <!-- core game -->
+    <script type="text/javascript" src="js/coregame/assets.js"></script>
+    <script type="text/javascript" src="js/coregame/saveloadreset.js"></script>
+    <script type="text/javascript" src="js/coregame/map.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/story.js"></script>
+    
     <script src="js/scratch-bootstrap.js"></script> <!-- BE: NEEDS INTEGRATION INTO INCLUDED JS! -->
   </head>
   <body class="noscroll">
