--- a/index2.html
+++ b/index2.html
@@ -381,8 +381,8 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
         <div id="centercol" class="col-xs-6">
           <ul id="maincol-tabs" class="nav nav-tabs">
             <li class="active"><a href="#eventDivHolder" data-toggle="tab">Events</a></li>
-            <li><a href="#otherContent" data-toggle="tab">World Map</a></li>
-            <li><a href="#internalMap" data-toggle="tab">Internal Map</a></li>
+            <li><a href="#mapTabContents" data-toggle="tab">World Map</a></li>
+            <li><a href="#internalMapContainer" data-toggle="tab">Internal Map</a></li>
             <li><a href="#categoryListContainer" data-toggle="tab">Global Inventory</a></li>
           </ul>
           <div class="tab-content  contentholder ">
@@ -390,7 +390,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
               <div id="eventDiv" class="content-center"></div>
               <button class="btn btn-default" id="clearButton" onclick="clearEventWindow();">Clear</button>
              </div>
-            <div id="otherContent" class="tab-pane fade">
+            <div id="mapTabContents" class="tab-pane fade">
               <div id="mapContainer">
                       <canvas id="land" height="500" width="500" class="img-responsive"></canvas>
               </div>
@@ -412,8 +412,8 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
                 </li>
               </ul>
             </div>
-            <div id="internalMap" class="tab-pane fade">
-              <img id="internalMapImage" class="img-responsive" src="images/internal_map.png" alt="canvas" />
+            <div id="internalMapContainer" class="tab-pane fade">
+              <!--<img id="internalMapImage" class="img-responsive" src="images/internal_map.png" alt="canvas" />-->
             </div>
           </div>
         </div>
