--- a/index2.html
+++ b/index2.html
@@ -381,8 +381,8 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
         <div id="centercol" class="col-xs-6">
           <ul id="maincol-tabs" class="nav nav-tabs">
             <li class="active"><a href="#eventDivHolder" data-toggle="tab">Events</a></li>
-            <li><a href="#mapTabContents" data-toggle="tab">World Map</a></li>
-            <li><a href="#internalMapContainer" data-toggle="tab">Internal Map</a></li>
+            <li><a href="#mapTabContents" data-toggle="tab" onclick="setTimeout(resizeElements, 250)">World Map</a></li>
+            <li><a href="#internalMapContainer" data-toggle="tab" onclick="setTimeout(resizeElements, 250)">Internal Map</a></li>
             <li><a href="#categoryListContainer" data-toggle="tab">Global Inventory</a></li>
           </ul>
           <div class="tab-content  contentholder ">
