--- a/index2.html
+++ b/index2.html
@@ -380,7 +380,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
         </div>
         <div id="centercol" class="col-xs-6">
           <ul id="maincol-tabs" class="nav nav-tabs">
-            <li class="active"><a href="#eventDivHolder" data-toggle="tab">Events</a></li>
+            <li class="active"><a href="#eventDivHolder" data-toggle="tab" onclick="setTimeout(resizeElements, 250)">Events</a></li>
             <li><a href="#mapTabContents" data-toggle="tab" onclick="setTimeout(resizeElements, 250)">World Map</a></li>
             <li><a href="#internalMapContainer" data-toggle="tab" onclick="setTimeout(resizeElements, 250)">Internal Map</a></li>
             <li><a href="#categoryListContainer" data-toggle="tab">Global Inventory</a></li>
@@ -459,7 +459,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
             </table>
           </div>
         </div>
-        <div class="col-xs-3">
+        <div id="travelSection"  class="col-xs-3">
           <table class="pull-right">
             <tr>
               <td><button id="nwbutton" type="button" class="btn btn-default direction-button">NW</button></td>
