Technically the actions are working

--- a/index2.html
+++ b/index2.html
@@ -418,11 +418,13 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
           </div>
         </div>
         <div class="col-xs-2">
-          <div class="centered">
+          <div class="centered" id="actionDiv">
             <h4 class="center">Actions</h4>
+            <div id="action_container">
             <button class="btn btn-default">Forage</button>
             <button class="btn btn-default">Build</button>
             <button class="btn btn-default" data-toggle="modal" data-target="#craftingModal">Craft</button>
+            </div>
           </div>
         </div>
       </div>
