--- a/index2.html
+++ b/index2.html
@@ -320,63 +320,17 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
     
     <div id="maincol" class="main container-fluid full">
       <div id="mainrow" class="row">
-        <div id="playercol" class="col-xs-2 full-height">
-          <div>
-            <h4 class="center">Player</h4>
+        <div class="col-xs-2 full-height">
+          <h4 class="center">Player</h4>
+          <div id="playerInventory">
             <button class="btn btn-default">Apple <span class="badge">5</span></button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Salamander</button>
-            <button class="btn btn-default">Giant</button>
-            <button class="btn btn-default">Your mother</button>
-            <button class="btn btn-default">other long word</button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stick</button>
-            <button class="btn btn-default">Stickz</button>
-            <button class="btn btn-default">Stickz</button>
           </div>
         </div>
         <div class="col-xs-2 full-height">
           <h4 class="center">Ground</h4>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
-          <button class="btn btn-default">Stick</button>
+          <div id="groundInventory">
+            <button class="btn btn-default">Stick</button>
+          </div>
         </div>
         <div id="centercol" class="col-xs-6">
           <ul id="maincol-tabs" class="nav nav-tabs">
