Beginning inventory table surgery

--- a/index2.html
+++ b/index2.html
@@ -322,12 +322,14 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
       <div id="mainrow" class="row">
         <div class="col-xs-2 full-height">
           <h4 class="center">Player</h4>
+          <h5 id="playerWeight" class="center">Weight: 0 / 100</h5>
           <div id="playerInventory">
             <button class="btn btn-default">Apple <span class="badge">5</span></button>
           </div>
         </div>
         <div class="col-xs-2 full-height">
           <h4 class="center">Ground</h4>
+          <h5>&nbsp;</h5>
           <div id="groundInventory">
             <button class="btn btn-default">Stick</button>
           </div>
