--- a/index2.html
+++ b/index2.html
@@ -425,7 +425,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
       </div>
     </footer>
     
-    <div id="craftingModal" class="modal fade" role="dialog">
+    <div id="CraftModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
     
         <!-- Modal content-->
@@ -439,6 +439,8 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
               <a title="Crafting ingredients: 6 sticks" data-toggle="tooltip" data-placement="bottom" ><button class="btn btn-default">Bundle of Firewood</button></a>
               <a title="Crafting ingredients: 4 apples" data-toggle="tooltip" data-placement="bottom" ><button class="btn btn-default">TestHeavyObject</button></a>
             </p>
+            <div id="craftDiv">
+            </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
