Internal map tab shows/hides as appropriate

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
           <ul id="maincol-tabs" class="nav nav-tabs">
             <li class="active"><a href="#eventDivHolder" data-toggle="tab" onclick="setTimeout(resizeElements, 250)">Events</a></li>
             <li><a href="#mapTabContents" data-toggle="tab" onclick="setTimeout(resizeElements, 250)">World Map</a></li>
-            <li><a href="#internalMapContainer" data-toggle="tab" onclick="setTimeout(resizeElements, 250)">Internal Map</a></li>
+            <li><a href="#internalMapContainer" id="internalMapTab" data-toggle="tab" onclick="setTimeout(resizeElements, 250)">Internal Map</a></li>
             <li><a href="#categoryListContainer" data-toggle="tab">Global Inventory</a></li>
           </ul>
           <div class="tab-content  contentholder ">
