--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * Collapsable tree menu: http://www.thecssninja.com/css/css-tree-menu
 * Collapsable list: http://code.stephenmorley.org/javascript/collapsible-lists/
 * 8 best jquery trees: http://webrevisions.com/jquery-plugins/8-best-jquery-tree-view-plugin/#.VW0gElVViko
+* Sprite based games with Canvas: http://jlongster.com/Making-Sprite-based-Games-with-Canvas
 
 * Bootstrap:
 ** Documentation: http://getbootstrap.com/
