How to build a JRPG javascript idea

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * Game Design Patterns: http://gameprogrammingpatterns.com/
 * Procedural dungeon generation: http://journal.stuffwithstuff.com/2014/12/21/rooms-and-mazes/
 * Procedural content generation (dynamic room descriptions... etc): http://pcg.wikidot.com/
+* How to build a JPRG (in javascript): http://gamedevelopment.tutsplus.com/articles/how-to-build-a-jrpg-a-primer-for-game-developers--gamedev-6676#reasons
 
 * Babel - js framework Derrick recommended 
 
