More game ideas

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * Procedural dungeon generation: http://journal.stuffwithstuff.com/2014/12/21/rooms-and-mazes/
 * Procedural content generation (dynamic room descriptions... etc): http://pcg.wikidot.com/
 * How to build a JPRG (in javascript): http://gamedevelopment.tutsplus.com/articles/how-to-build-a-jrpg-a-primer-for-game-developers--gamedev-6676#reasons
+* Web based tactical role playing game in Javascript: http://digitalcommons.calpoly.edu/cgi/viewcontent.cgi?article=1042&context=cscsp
+** references: enchant.js (javascript game engine)- http://enchantjs.com/
 
 * Babel - js framework Derrick recommended 
 
@@ -82,6 +84,7 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * Tympanous (tons of images) : http://tympanus.net/codrops/category/playground/
 * Modal Windows: http://tympanus.net/codrops/2013/06/25/nifty-modal-window-effects/ , Demo: http://tympanus.net/Development/ModalWindowEffects/
 * Iphone minimal-ui -- need minimal ui to hide address bar: https://github.com/gajus/brim
+* (tool) Tiled, lets you use those RPG Maker terrain sprite sheets: http://gamedevelopment.tutsplus.com/tutorials/introduction-to-tiled-map-editor--gamedev-2838
 
 * UI Ideas:
 * Clicking FF7 http://clickingff7.com/#/map
