Level design ideas

--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * Game Design Patterns: http://gameprogrammingpatterns.com/
 * Procedural dungeon generation: http://journal.stuffwithstuff.com/2014/12/21/rooms-and-mazes/
 * Procedural content generation (dynamic room descriptions... etc): http://pcg.wikidot.com/
-* How to build a JPRG (in javascript): http://gamedevelopment.tutsplus.com/articles/how-to-build-a-jrpg-a-primer-for-game-developers--gamedev-6676#reasons
+* (Good!) How to build a JPRG (in javascript): http://gamedevelopment.tutsplus.com/articles/how-to-build-a-jrpg-a-primer-for-game-developers--gamedev-6676#reasons
+** Concepts: game states and state stack
+** Level design (with Tiled maps) http://gamedevelopment.tutsplus.com/tutorials/introduction-to-tiled-map-editor--gamedev-2838
+** Tiled map editor: http://www.mapeditor.org/
+*** Language/platform support: http://doc.mapeditor.org/reference/support-for-tmx-maps/
 * Web based tactical role playing game in Javascript: http://digitalcommons.calpoly.edu/cgi/viewcontent.cgi?article=1042&context=cscsp
 ** references: enchant.js (javascript game engine)- http://enchantjs.com/
 
@@ -135,6 +139,7 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * landscapes: http://commons.wikimedia.org/wiki/Category:Landscapes
 * quality landscapes: http://commons.wikimedia.org/wiki/Category:Quality_images_of_landscapes
 * Free game art: http://opengameart.org/
+* More free game art: http://www.lostgarden.com/search/label/free%20game%20graphics
 * Game icons: http://game-icons.net/
 
 Graphs:
