--- a/index.html
+++ b/index.html
@@ -338,10 +338,10 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
         </div>
         <div id="centercol" class="col-xs-6">
           <ul id="maincol-tabs" class="nav nav-tabs">
-            <li class="active"><a href="#eventDivHolder" data-toggle="tab" onclick="setTimeout(resizeElements, 250)">Events</a></li>
-            <li><a href="#mapTabContents" data-toggle="tab" onclick="setTimeout(resizeElements, 250)">World Map</a></li>
-            <li><a href="#internalMapContainer" id="internalMapTab" data-toggle="tab" onclick="setTimeout(resizeElements, 250)">Internal Map</a></li>
-            <li><a href="#categoryListContainer" data-toggle="tab">Global Inventory</a></li>
+            <li class="active"><a id="eventTab" href="#eventDivHolder" data-toggle="tab" onclick="setTimeout(resizeElements, 250)">Events</a></li>
+            <li><a id="worldMapTab" href="#mapTabContents" data-toggle="tab" onclick="setTimeout(resizeElements, 250)">World Map</a></li>
+            <li><a id="internalMapTab" href="#internalMapContainer" id="internalMapTab" data-toggle="tab" onclick="setTimeout(resizeElements, 250)">Internal Map</a></li>
+            <li><a id="categoryListTab" href="#categoryListContainer" data-toggle="tab">Global Inventory</a></li>
           </ul>
           <div class="tab-content  contentholder ">
             <div id="eventDivHolder" class="tab-pane fade in active">
