--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
           </div>
           <div class="col-xs-3">
             <div class="debugBlock">
-              <button type="button" class="btn btn-default">Record</button>
+              <button type="button" class="btn btn-default" onclick="toggleRecording();">Record</button>
             </div>
           </div>
           <div class="col-xs-3">
