--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * Web based tactical role playing game in Javascript: http://digitalcommons.calpoly.edu/cgi/viewcontent.cgi?article=1042&context=cscsp
 ** references: enchant.js (javascript game engine)- http://enchantjs.com/
 
-* Babel - js framework Derrick recommended 
+Frameworks
+* Babel - js framework Derrick recommended
+* HTML 5 game engines: http://doc.mapeditor.org/reference/support-for-tmx-maps/#html5-multiple-engines
 
 * Battle:
 * Alightments: good/evil, neutral: if you run into good guys, can recruit(/fight if evil), if you run into bad, can recruit/fight (hero/bandit)
