Initial working settlement expansion

--- a/index.html
+++ b/index.html
@@ -425,6 +425,29 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
       </div>
     </div>
     <!-- END CRAFTING MODAL -->
+    <div id="ExpandModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+    
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Settlement Expansion</h4>
+          </div>
+          <div class="modal-body">
+            <div id="expandDiv" class="col-md-6">
+            </div>
+            <div id="expandSection" class="col-md-6">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+    
+      </div>
+    </div>
+    <!-- END EXPANSION MODAL -->
     <canvas id="perlin" hidden="true"></canvas> <!-- to capture noise information about the map -->
   </body>
 </html>
