Expand no longer shows up outside town

--- a/index.html
+++ b/index.html
@@ -427,7 +427,6 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
     <!-- END CRAFTING MODAL -->
     <div id="ExpandModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
-    
         <!-- Modal content-->
         <div class="modal-content">
           <div class="modal-header">
@@ -435,16 +434,13 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
             <h4 class="modal-title">Settlement Expansion</h4>
           </div>
           <div class="modal-body">
-            <div id="expandDiv" class="col-md-6">
-            </div>
-            <div id="expandSection" class="col-md-6">
+            <div id="expandSection">&nbsp;
             </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
         </div>
-    
       </div>
     </div>
     <!-- END EXPANSION MODAL -->
