Immutable.js idea

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@ Frameworks
 ** Flexbox sticky footer: http://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
 ** 50 must-have plugins: http://tutorialzine.com/2013/07/50-must-have-plugins-for-extending-twitter-bootstrap/
 
+* Immutable.js - a bunch of nice java-like data structures (maps, lists, sets, etc) - https://facebook.github.io/immutable-js/docs/#/
+
 * Our World is Broken:
 ** Players should not need instruction, they should learn from the *feedback systems*, and then reference documentation if they get stuck
 ** Make a game to help players do hard work that they enjoy and appreciate
@@ -154,6 +156,7 @@ Cytoscape: http://js.cytoscape.org/#top
 
 Quests:
 * randomly generated WoW-style quests: who, what, when, where, why spelled out
+
 
 
 INSPIRATION:
