Expansion: expand costs enforced and displayed

--- a/index.html
+++ b/index.html
@@ -428,6 +428,8 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
       </div>
     </div>
     <!-- END CRAFTING MODAL -->
+    
+    <!-- EXPANSION MODAL -->
     <div id="ExpandModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
         <!-- Modal content-->
@@ -437,6 +439,10 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
             <h4 class="modal-title">Settlement Expansion</h4>
           </div>
           <div class="modal-body">
+            <div class="panel panel-default">
+              <div class="panel-heading">Expansion Costs</div>
+              <table class="table" id="expandCostTable"></table>
+            </div>
             <div id="expandSection">&nbsp;
             </div>
           </div>
