Reminder to expand modal content

--- a/index.html
+++ b/index.html
@@ -433,6 +433,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
     <div id="ExpandModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
         <!-- Modal content-->
+        <!-- TODO: FIX LAYOUT OF EXPAND MODAL CONTENT (maybe?) -->
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
