--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
     <script type="text/javascript" src="js/views/joyride.js"></script>
     <script type="text/javascript" src="js/views/progressbar.js"></script>
     <script type="text/javascript" src="js/views/travel.js"></script>
-    <script type="text/javascript" src="js/views/forage.js"></script>
+    <script type="text/javascript" src="js/views/scavenge.js"></script>
     <script type="text/javascript" src="js/views/buildcraft.js"></script>
     <script type="text/javascript" src="js/views/craft.js"></script>
     <script type="text/javascript" src="js/views/build.js"></script>
