Added inspiration for basic survival skills

--- a/index.html
+++ b/index.html
@@ -162,7 +162,10 @@ Quests:
 INSPIRATION:
 Dynamic worlds, dynamic creatures, dynamic quests:
 * http://web.archive.org/web/20080211222642/http://www.cs.umd.edu/~jra/craft3.pdf -
-   - Concepts: 
+   - Concepts:
+Basic survival skills:
+* http://www.primitiveways.com/
+** Cordage: http://www.primitiveways.com/cordage.html
 -->
 
 <!-- 
