--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ Frameworks
 * Modal Windows: http://tympanus.net/codrops/2013/06/25/nifty-modal-window-effects/ , Demo: http://tympanus.net/Development/ModalWindowEffects/
 * Iphone minimal-ui -- need minimal ui to hide address bar: https://github.com/gajus/brim
 * (tool) Tiled, lets you use those RPG Maker terrain sprite sheets: http://gamedevelopment.tutsplus.com/tutorials/introduction-to-tiled-map-editor--gamedev-2838
+* Vertical bootstrap progress bar : http://codepen.io/vishalkardode/pen/jEPPKa
 
 * UI Ideas:
 * Clicking FF7 http://clickingff7.com/#/map
