--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ Frameworks
 * Iphone minimal-ui -- need minimal ui to hide address bar: https://github.com/gajus/brim
 * (tool) Tiled, lets you use those RPG Maker terrain sprite sheets: http://gamedevelopment.tutsplus.com/tutorials/introduction-to-tiled-map-editor--gamedev-2838
 * Vertical bootstrap progress bar : http://codepen.io/vishalkardode/pen/jEPPKa
+* More vertical bootstrap progress bars (paid) : http://bootstrapcarnival.com/bootstrap-theme/aro-bootstrap-components
 
 * UI Ideas:
 * Clicking FF7 http://clickingff7.com/#/map
