--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Frameworks
 * (tool) Tiled, lets you use those RPG Maker terrain sprite sheets: http://gamedevelopment.tutsplus.com/tutorials/introduction-to-tiled-map-editor--gamedev-2838
 * Vertical bootstrap progress bar : http://codepen.io/vishalkardode/pen/jEPPKa
 * More vertical bootstrap progress bars (paid) : http://bootstrapcarnival.com/bootstrap-theme/aro-bootstrap-components
-* Progress bar plug in (jquery + bootstrap) : http://www.minddust.com/project/bootstrap-progressbar/, http://www.minddust.com/project/bootstrap-progressbar/demo/bootstrap-3-3-4/
+* Progress bar plug in (jquery + bootstrap, see "default settings (bottom)") : http://www.minddust.com/project/bootstrap-progressbar/, http://www.minddust.com/project/bootstrap-progressbar/demo/bootstrap-3-3-4/
 
 * UI Ideas:
 * Clicking FF7 http://clickingff7.com/#/map
