--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 *** Language/platform support: http://doc.mapeditor.org/reference/support-for-tmx-maps/
 * Web based tactical role playing game in Javascript: http://digitalcommons.calpoly.edu/cgi/viewcontent.cgi?article=1042&context=cscsp
 ** references: enchant.js (javascript game engine)- http://enchantjs.com/
+* 5 Approaches to Crafting Systems: http://gamedevelopment.tutsplus.com/articles/5-approaches-to-crafting-systems-in-games-and-where-to-use-them--cms-22628
 
 Frameworks
 * Babel - js framework Derrick recommended
