--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 ** references: enchant.js (javascript game engine)- http://enchantjs.com/
 * 5 Approaches to Crafting Systems: http://gamedevelopment.tutsplus.com/articles/5-approaches-to-crafting-systems-in-games-and-where-to-use-them--cms-22628
 
+Crafting design:
+* http://gamedevelopment.tutsplus.com/articles/5-approaches-to-crafting-systems-in-games-and-where-to-use-them--cms-22628
+* Item ideas (Diablo 3) : http://us.battle.net/d3/en/item/boots/#type=common
+
 Frameworks
 * Babel - js framework Derrick recommended
 * HTML 5 game engines: http://doc.mapeditor.org/reference/support-for-tmx-maps/#html5-multiple-engines
